--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@ button {
 <hr>
 
 <h3>المعدل السابق</h3>
-<input type="number" id="prevGPA" step="0.0001" placeholder=" وإذا بدك تحسب معدل هذه السنة فقط فَـ ضع 0 ">
+<input type="number" id="prevGPA" step="0.0001" placeholder=" إذا بدك تحسب معدل هذه السنة فقط فَـ ضع 0 ">
 
 <h3>عدد الساعات السابقة</h3>
-<input type="number" id="prevHours" placeholder=" وإذا بدك تحسب معدل هذه السنة فقط فَـ ضع 0 ">
+<input type="number" id="prevHours" placeholder=" إذا بدك تحسب معدل هذه السنة فقط فَـ ضع 0 ">
 
 <h3>اختر السنة</h3>
 <select id="yearSelect" onchange="loadSubjects()">
