--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@ h1 {
 
 h3 {
     margin-top: 4px;
-    color: #555;
+    font-size: 20px;      /* خط أكبر شوي */
+    color: #0f5132;       /* أخضر غامق */
+    font-weight: bold;   /* Bold */
 }
-
 table {
     width: 100%;
     border-collapse: collapse;
